--- a/static/styles.css
+++ b/static/styles.css
@@ -34,3 +34,84 @@ font-size: 180%;
 .navbar{
   padding: 10px;
 }
+
+<style>
+body {
+  font-family: "Lato", sans-serif;
+  transition: background-color .5s;
+}
+
+#logout{
+    position: fixed;
+    font-size: 150%;
+    left:93%;
+}
+#username_label {
+    position: fixed;
+    font-size: 150%;
+    left:86%;
+}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+#textarea_label{
+  margin-top: 3%;
+}
+.shadow-textarea textarea.form-control::placeholder {
+    font-weight: 300;
+    margin-top: 5%;
+}
+#exampleFormControlTextarea6 {
+    width: 50%;
+    position: relative;
+    height: 500px;
+    padding-left: 0.8rem;
+}
+.chat{
+  margin-left: 20%;
+}
+#textfield{
+  width: 35%;
+  height: 50px;
+}
