--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,56 @@
 <!DOCTYPE html>
 <html>
-    <head>
-       <title>Home</title>
+   <head>
+       <title>Channels</title>
        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script src="../static/JS.js"></script>
+        <link rel="stylesheet" href=
+      "https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+      <script src=
+      "https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
+      </script>
+      <script src=
+      "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js">
+      </script>
+      <script src=
+      "https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
+      </script>
        <link rel="stylesheet" href="../static/styles.css">
    </head>
    <body>
-     <div class=body>
-     <h1> Welcome to Flack </h1>
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     </head>
+     <body>
+
+     <div id="mySidenav" class="sidenav">
+       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+       <a href="#">About</a>
+       <a href="#">Services</a>
+       <a href="#">Clients</a>
+       <a href="#">Contact</a>
+     </div>
+     <nav class="navbar navbar-expand-lg navbar-light bg-light">
+       <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;  </span>
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+       </button>
+       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+         <div class="navbar-nav">
+           <a class="nav-link"  id="username_label" href="#" style="color:lightseagreen">{{ session.username }}</a>
+           <a id="logout" class="nav-item nav-link" href="/logout">Logout</a>
+         </div>
+       </div>
+     </nav>
+ <div class= "channel-form ">
      <form>
        <div class="form-group">
-         <label for="exampleInputEmail1">Display name</label>
-         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+         <label for="exampleInputEmail1">Create a channel or join an existing one!</label>
+         <input type="text" size= 50 class="form-control" id="exampleInputEmail1" >
          <small id="emailHelp" class="form-text text-muted">choose a Display name to be known for.</small>
        </div>
-       <button type="submit" class="btn btn-primary">Submit</button>
+       <button type="submit" class="btn btn-primary">Enter</button>
      </form>
-   </div>
-   </body>
+</div>
+  </body>
 </html>
