--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -1,49 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
 
-    <head>
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-       <script src="../static/JS.js"></script>
-       <link rel="stylesheet" href=
-     "https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-     <script src=
-     "https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
-     </script>
-     <script src=
-     "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js">
-     </script>
-     <script src=
-     "https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
-     </script>
-      <link rel="stylesheet" href="../static/styles.css">
-    </head>
-    <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;  </span>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#"> +Channel <span class="sr-only">(current)</span></a>
-            <a id="logout" class="nav-item nav-link" href="#">Logout</a>
-          </div>
+{% block title %}
+{{ session.current_channel }}
+{% endblock %}
+
+{% block content %}
+<div>
+   <h1 style="margin-bottom: 1rem">
+       <span class="badge badge-dark">
+           {{ session.current_channel }}
+       </span>
+   </h1>
+
+</div>c
+<div class="container-channel custom-window">
+   <div id="chat-box" class="list-group">
+        {#
+            http://jinja.pocoo.org/docs/2.10/templates/#whitespace-control
+
+            Minus(-) used to strip all the whitespace
+            Only if there are messages, render it.
+       #}
+       <textarea id="chat" cols="30" rows="20" readonly>
+            {%- if messages -%}
+                {%- for message in messages -%}
+                    <{{ message[0] }}> - [{{ message[1] }}]: {{ message [2] }} {{'\n'}}
+                {%- endfor -%}
+                {{ '----- These are old messages -----' }}{{- '\n' -}}
+            {%- endif -%}
+       </textarea>
+   </div>
+
+    <div id="message-box">
+        <div class="form-border">
+            <div class="form-row">
+                <div class="form-group col-sm">
+                    <div class="input-group">
+                        <input id="comment" class="form-control" size="50" autocomplete="off" autofocus>
+                    </div>
+                </div>
+                <div class="form-group col-sm-2">
+                    <button id="send-button" class="btn btn-success" type="reset">Send</button>
+                </div>
+                <div class="form-group col-sm-1">
+                    <button id="leave" type="button" class="btn btn-warning">Leave channel</button>
+                </div>
+            </div>
         </div>
-      </nav>
+    </div>
+    <div id="file-selector">
+        <input type="file" accept="image/*" class="form-control-file" id="exampleFormControlFile1">
+    </div>
+</div>
 
-      <div class="chat">
-        <div class="form-group shadow-textarea">
-          <label id = "textarea_label"for="exampleFormControlTextarea6">{{channel_name}}</label>
-          <textarea class="form-control z-depth-1" id="exampleFormControlTextarea6" rows="3" placeholder="Write something here..."></textarea>
-          <input id = "textfield" type="text" name="textfield" placeholder="Write a message">
-          <input type="submit" name="send" value="send">
-          <input type="submit" name="leave" value="leave channel">
-        </div>
-
-      </div>
-
-
-
-    </body>
-</html>
+{% endblock %}
