--- a/static/styles.css
+++ b/static/styles.css
@@ -102,7 +102,7 @@ body {
     font-weight: 300;
     margin-top: 5%;
 }
-#exampleFormControlTextarea6 {
+#chat {
     width: 50%;
     position: relative;
     height: 500px;
